# phishguard

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh  train_on_startup.py  wsgi.py
.github/workflows/: ci.yml
artifacts/: metrics.json
docs/: index.html
scripts/: make_url_dataset_template.py  uci_arff_to_csv.py
src/phishguard/: __init__.py  app.py  features.py  model.py  routes.py  train.py
tests/: test_api.py  test_features.py
