[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishguard"
version = "1.0.0"
description = "Phishing Website Detection with Flask API (RandomForest + SMOTE)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Bhargavi", email="example@example.com"}]
dependencies = [
  "flask>=3.0.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "imbalanced-learn>=0.11",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.8",
  "scipy>=1.10", # only needed for ARFF conversion script
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
